--- a/composer.json
+++ b/composer.json
@@ -8,49 +8,54 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3.0",
+        "php": "^8.1",
         "aws/aws-sdk-php": "~3.0",
-        "bavix/laravel-wallet": "^6.1",
-        "eluceo/ical": "^0.15.1",
-        "fruitcake/laravel-cors": "^2.0",
-        "fakerphp/faker": "^1.14",
-        "fideloper/proxy": "^4.0",
-        "intervention/image": "^2.4",
-        "johngrogg/ics-parser": "^2.1",
-        "kalnoy/nestedset": "^5.2.0",
-        "laravel/framework": "^8.0",
-        "laravel/socialite": "^5.0",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0",
-        "league/flysystem-aws-s3-v3": "^1.0",
-        "league/omnipay": "^3",
-        "maatwebsite/excel": "^3.1",
-        "mews/purifier": "^3.3",
-        "munafio/chatify": "^1.3.0",
+        "bavix/laravel-wallet": "10.0.0",
+        "eluceo/ical": "2.12.1",
+        "fakerphp/faker": "1.23.0",
+        "intervention/image": "^2.7|^3.0",
+        "johngrogg/ics-parser": "3.2.1",
+        "kalnoy/nestedset": "6.0.2",
+        "laravel/framework": "^10.0",
+        "laravel/sanctum": "3.3.1",
+        "doctrine/dbal": "^3.5|^4.0",
+        "laravel/passport": "11.9.1",
+        "laravel/socialite": "5.9.1",
+        "laravel/tinker": "2.8.2",
+        "laravel/ui": "4.2.2",
+        "league/flysystem-aws-s3-v3": "3.16.0",
+        "league/omnipay": "3.2.1",
+        "maatwebsite/excel": "3.1.48",
+        "mews/purifier": "3.4.1",
+        "munafio/chatify": "1.6.2", 
         "omnipay/migs": "~3.0",
         "omnipay/paypal": "^3.0",
         "omnipay/stripe": "^3.0",
-        "propaganistas/laravel-phone": "^4.2",
+        "propaganistas/laravel-phone": "5.0.3",
         "rachidlaasri/laravel-installer": "^4.0",
-        "rap2hpoutre/laravel-log-viewer": "^1.1",
-        "simplesoftwareio/simple-qrcode": "^2.0",
-        "spatie/laravel-image-optimizer": "^1.4",
-        "spatie/laravel-permission": "^3.16",
-        "tymon/jwt-auth": "^1.0",
-        "pusher/pusher-php-server": "^7.0"
+        "rap2hpoutre/laravel-log-viewer": "2.3.0",
+        "simplesoftwareio/simple-qrcode": "4.2.0",
+        "spatie/laravel-image-optimizer": "1.7.1",
+        "spatie/laravel-permission": "5.11.0",
+        "tymon/jwt-auth": "^5.0|^2.0",
+        "pusher/pusher-php-server": "7.2.3"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.5",
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.12",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.0"
+        "barryvdh/laravel-debugbar": "3.9.2",
+        "beyondcode/laravel-dump-server": "1.9.0",
+        "filp/whoops": "2.15.3",
+        "mockery/mockery": "1.6.6",
+        "nunomaduro/collision": "7.8.1",
+        "spatie/laravel-ignition": "2.3.0",
+        "phpunit/phpunit": "10.3.4"
     },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     },
     "extra": {
         "laravel": {
