--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "pusher/pusher-php-server": "7.2.3",
         "rachidlaasri/laravel-installer": "^4.0",
         "rap2hpoutre/laravel-log-viewer": "2.3.0",
-        "simplesoftwareio/simple-qrcode": "4.2.0",
+        "simplesoftwareio/simple-qrcode": "~4",
         "spatie/laravel-image-optimizer": "1.7.1",
         "spatie/laravel-permission": "5.11.0",
         "tymon/jwt-auth": "^5.0|^2.0"
